# GrupoF

./: Cargo.toml  index.md
paralelo/: paralelo.rs  regex_redux_mpi.c
serial/: regex_redux_serial.c  sequencial.rs
src/: main.rs  sequencial.rs
