[package]
name = "rust-ppc"
version = "0.1.0"
authors = ["Eufranio <eufraniow@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libc = "0.2.81"
pcre2-sys = "0.2.5"
rayon = "1.5.0"
regex = "1.4.2"
futures = "0.3.8"